Fixed positionality issue with the 'title' field and the text input bar, no longer jumps to the right. Updated styling to the text input field

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,7 +17,7 @@ code {
 }
 
 .btn {
-  @apply basis-1/3 bg-yellow p-3 rounded shadow-md tracking-wider m-auto;
+  @apply basis-1/3 bg-yellow p-2 rounded shadow-md tracking-wider m-auto;
 }
 
 .circle {
@@ -25,4 +25,14 @@ code {
   width: 25px;
   border-radius: 50%;
   display: inline-block;
+}
+
+.title-field {
+  margin-bottom: 10px;
+  margin-right: -40px;
+  height: 30px;
+  width: 100px;
+  padding: 5px;
+  border: 1px solid #F1B625;
+  border-radius: 5px;
 }
